--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,30 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
-body{
+body {
   color: #fff;
 }
-.plus-bolder{
-    font-family: "Plus Jakarta Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: auto;
-    font-style: normal;
+
+.plus-bolder {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: auto;
+  font-style: normal;
 }
 
-  input[type="search"] {
-    transition: all 0.3s ease-in-out;
-  }
-  
-  input[type="search"]:focus {
-    box-shadow: 0 0 13px 5px rgba(40, 144, 230, 0.5);
-  }
-  
-  button {
-    transition: all 0.3s ease-in-out;
-  }
-  
-  input[type="search"]::-webkit-search-cancel-button {
-    -webkit-appearance: none;
-  }
+/* Styles for inputs with class input-home */
+.input-home {
+  transition: all 0.3s ease-in-out;
+}
+
+.input-home::-webkit-search-cancel-button {
+  -webkit-appearance: none;
+}
+
+/* Styles for buttons with class btn-home */
+.btn-home {
+  transition: all 0.3s ease-in-out;
+}
 
 .black-overlay{
   background-color: rgba(0, 0, 0, 0.5);
@@ -37,5 +36,4 @@ body{
   body::-webkit-scrollbar {
     width: 0px;
   }
-  
 }
